@@ -10,7 +10,6 @@ import net.craftions.lobby.events.EventBlockBreak;
 import net.craftions.lobby.events.EventPlayerDisconnect;
 import net.craftions.lobby.events.EventPlayerJoin;
 import org.bukkit.Bukkit;
-import org.bukkit.craftbukkit.libs.org.apache.commons.io.FileUtils;
 import org.bukkit.plugin.java.JavaPlugin;
 
 import java.io.File;
@@ -19,12 +18,12 @@ import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class Lobby extends JavaPlugin {
 
     private static Lobby plugin;
     private String prefix = "";
-
     public static Lobby getInstance(){
         return plugin;
     }
@@ -37,7 +36,7 @@ public class Lobby extends JavaPlugin {
         File locationConf = new File("./plugins/lobby/locations.yml");
         if(createFolderRoot(systemConf)){
             try {
-                byte[] content = Files.readAllBytes(Path.of(getClass().getResource("/system.clean.yml").getPath()));
+                byte[] content = Files.readAllBytes(Paths.get(getClass().getResource("/system.clean.yml").getPath()));
                 systemConf.createNewFile();
                 FileWriter w = new FileWriter(systemConf);
                 w.write(new String(content, StandardCharsets.UTF_8));
@@ -48,7 +47,7 @@ public class Lobby extends JavaPlugin {
         }
         if(createFolderRoot(messageConf)){
             try {
-                byte[] content = Files.readAllBytes(Path.of(getClass().getResource("/messages.clean.yml").getPath()));
+                byte[] content = Files.readAllBytes(Paths.get(getClass().getResource("/messages.clean.yml").getPath()));
                 systemConf.createNewFile();
                 FileWriter w = new FileWriter(messageConf);
                 w.write(new String(content, StandardCharsets.UTF_8));
@@ -59,7 +58,7 @@ public class Lobby extends JavaPlugin {
         }
         if(createFolderRoot(locationConf)){
             try {
-                byte[] content = Files.readAllBytes(Path.of(getClass().getResource("/locations.clean.yml").getPath()));
+                byte[] content = Files.readAllBytes(Paths.get(getClass().getResource("/locations.clean.yml").getPath()));
                 systemConf.createNewFile();
                 FileWriter w = new FileWriter(locationConf);
                 w.write(new String(content, StandardCharsets.UTF_8));
